* Take out provenance development code from SearchResultView * Turn off prov development features (fake/test data) in the dataone theme * In the prov chart popover, display the citation first and the prov statement second * Fix the collapseable list of identifiers in the ProvStatements so that the list items are inline but have more spacing in between for legibility.

--- a/metacatui/src/main/webapp/css/metacatui-common.css
+++ b/metacatui/src/main/webapp/css/metacatui-common.css
@@ -110,7 +110,7 @@ article.container {
 }
 .provenance-statement a{
 	/*Keep the icons and links right by each other */
-	display: inline-block;
+	display: inline;
 	word-break: break-all; 
 }
 /*The metadata gets narrowed when there is one prov chart next to it*/
@@ -151,6 +151,9 @@ article.hasProvLeft.hasProvRight{
 }
 .expand-collapse .control.hidden{
 	display: none;
+}
+.expand-collapse .spacer{
+	margin-right: 10px;
 }
 
 /****************************************** 
@@ -250,6 +253,53 @@ article.hasProvLeft.hasProvRight{
 }
 
 /****************************************** 
+* Download / Resource Map contents table
+********************************************/
+    
+#downloadContents .controls-well{
+	overflow-x: scroll;
+}
+table.download-contents {
+	width: 100%;
+	margin-bottom: 0px;
+}
+.download-contents td{
+	overflow-wrap: break-word;
+	font-weight: lighter;
+}
+.download-contents th{
+	font-weight: normal;
+}
+.download-contents i{
+	font-size: 1.5em;
+}
+.download-contents .btn i{
+	font-size: 1em;
+	margin-left: 5px;
+}
+.download-contents a[href="#tools/eml"]{
+	color: inherit;
+}
+.download .btn i{
+	margin-left: 5px;
+}
+.download-contents .size{
+	max-width: 1px;
+}
+.download-contents .format-type{
+	text-align: center;
+	width: 1px;
+}
+.download-contents td{
+    vertical-align: middle; /*Oh tables, good for one thing...*/
+}    
+.file-type i {
+  color: #999;
+  margin-left: 5px;
+}    
+/**----------------------------------------**/
+
+/****************************************** 
 * Citations and Citation Popovers
 ********************************************/
 .popover .citation .id{
@@ -279,3 +329,8 @@ article.hasProvLeft.hasProvRight{
 	font-size: .9em;
 	line-height: 1.3em;
 }
+.popover cite{ 
+	display: block;
+	margin-bottom: 20px; 
+}
+
